media/plex/plex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plex
    release: plex
  name: plex
  namespace: media
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: plex
      release: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
        release: plex
    spec:
      automountServiceAccountToken: false
      containers:
      - name: plex
        image: linuxserver/plex:arm64v8-1.41.4
        ports:
        - name: http
          containerPort: 32400
          protocol: TCP
        - name: https
          containerPort: 32443
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /identity
            port: 32400
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /identity
            port: 32400
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /config
          name: config
          subPath: plex
        - mountPath: /transcode
          name: transcode
        - mountPath: /shared
          name: shared
      dnsPolicy: ClusterFirst
      hostname: plex
      nodeSelector:
        kubernetes.io/hostname: pimaster
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: media-data
      - name: config
        persistentVolumeClaim:
          claimName: media-config
      - emptyDir: {}
        name: transcode
      - emptyDir: {}
        name: shared
