media/plex/plex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
    release: plex
spec:
  selector:
    app: plex
  ipFamilies:
  - IPv4
  ports:
  - name: pms
    port: 32400
    targetPort: 32400
  - name: http
    port: 80
    targetPort: 32400
  - name: https
    port: 443
    targetPort: 32443
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: 192.168.0.241
