media/plex/plex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: media
  name: plex-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: plex.192.168.0.240.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: plex
            port:
              number: 32400
